# zabbix-module-python

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
conf/: libzbxpython2.conf  libzbxpython3.conf
extra/docker/: Dockerfile  docker-entrypoint.sh
extras/Docker/: Dockerfile  README.md  build-app.sh
extras/Docker/python-3.7-stretch/: README.md
lib/: dummy.py  zabbix_module.py
m4/: ax_python_devel.m4
python/: Makefile.am  dummy.py  setup.py  zabbix_module.py
src/: Makefile.am  libzbxpython.c  libzbxpython.h  log.c  python.c  route.c  runtime.c
src/modules/python/: Makefile.am  libzbxpython.h  python.c  route.c  runtime.c
